--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
+        "APP_KEY": "base64:S/gFWkLfbKaUgqcnAWFGXCkC6gGPPbwIr09sBFkyx8Q=",
         "APP_URL": "https://yourproductionurl.com",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
