Fixed deployment bug

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,7 @@
         "APP_DEBUG": "true",
         "APP_KEY": "base64:S/gFWkLfbKaUgqcnAWFGXCkC6gGPPbwIr09sBFkyx8Q=",
         "APP_URL": "https://yourproductionurl.com",
+        "ASSET_URL": "${APP_URL}",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
