--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,10 @@
     "version": 2,
       "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.7.1" }
+        "api/*.php": { 
+            "runtime": "vercel-php@0.6.2" 
+        }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
