--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,11 @@
     "version": 2,
       "framework": null,
     "functions": {
-        "api/*.php": { 
-            "runtime": "vercel-php@0.6.2" 
+        "api/index.php": { 
+            "runtime": "vercel-php@0.6.1" 
+        },
+        "api/about.php": { 
+            "runtime": "vercel-php@0.6.1" 
         }
     },
     "env": {
