--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,13 @@
 {
     "version": 2,
-      "framework": null,
+    "framework": null,
     "functions": {
-        "api/index.php": { 
-            "runtime": "vercel-php@0.6.1" 
-        },
-        "api/about.php": { 
-            "runtime": "vercel-php@0.6.1" 
-        }
+        "api/index.php": { "runtime": "vercel-php@0.6.2" }
     },
-    "routes": [
-        {
-            "src": "/index",  
-            "dest": "/api/index.php"
-        },
-        {
-            "src": "/about",  
-            "dest": "/api/about.php"
-        }
-    ],
+    "routes": [{
+        "src": "/(.*)",
+        "dest": "/api/index.php"
+    }],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
